--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "bootstrap-icons": "^1.8.1",
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.4",
+    "nanoid": "^3.3.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.16.2",
     "react-scripts": "5.0.0",
+    "seedrandom": "^3.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
