--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
+    "html2canvas": "^1.4.1",
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.4",
     "nanoid": "^3.3.2",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.16.2",
     "react-scripts": "5.0.0",
     "seedrandom": "^3.0.5",
+    "use-react-screenshot": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
