--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.0.0",
     "react-i18next": "^11.16.2",
     "react-scripts": "5.0.0",
+    "sass": "^1.50.1",
     "seedrandom": "^3.0.5",
     "use-react-screenshot": "^3.0.0",
     "web-vitals": "^2.1.4"
