--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "reactecho {}> .prettierrc.json-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src/**/*.js src/**/*.jsx"
+    "lint": "eslint {**/*,*}.{js,jsx}"
   },
   "eslintConfig": {
     "extends": [
