--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.50.1",
     "seedrandom": "^3.0.5",
+    "semver": "^7.3.7",
     "use-react-screenshot": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
