--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.16.2",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "sass": "^1.50.1",
     "seedrandom": "^3.0.5",
