--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-i18next": "^11.16.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-share": "^4.4.0",
     "sass": "^1.50.1",
     "seedrandom": "^3.0.5",
     "semver": "^7.3.7",
